# RAJA-SDP

./: .gitmodules  CMakeLists.txt
exp/: CMakeLists.txt  main-type-erasure.cpp
src/: CMakeLists.txt  device.hpp  device2.hpp  forall.hpp  main-test.cu  main.cpp  main.cu
